# Rust_Mock_POS

./: .env  Cargo.toml  diesel.toml
migrations/2023-04-02-032917_company_employees/: up.sql
src/: gui.rs  lib.rs  main.rs  models.rs  schema.rs
