[package]
name = "employee_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.0.3", features = ['postgres'] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
dotenvy = "0.15.7"
eframe = "0.21.3"
egui = "0.21.0"
